finishing threads CRUD, fix some logic
