# circleAppBE/src/utils/schemas/thread-schema.ts
@@ -1,0 +1,7 @@
+import Joi from "joi";
+import { CreateThreadDTO } from "../../dto/thread-dto";
+
+export const createThreadSchema = Joi.object<CreateThreadDTO>({
+  content: Joi.string(),
+  image: Joi.string(),
+});
